--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -48,6 +48,10 @@
         <configuration>
           <instructions>
             <EOSGi-TestNum>0</EOSGi-TestNum>
+            <Provide-Capability>
+              liquibase.schema;name=org.everit.persistence.liquibase.ext.osgi.test0;resource=/META-INF/org.everit.persistence.liquibase.ext.osgi.test0.xml;version=3.0.0,
+              liquibase.schema;name=org.everit.persistence.liquibase.ext.osgi.test0_included;resource=/META-INF/org.everit.persistence.liquibase.ext.osgi.test0_included.xml
+            </Provide-Capability>
           </instructions>
         </configuration>
       </plugin>
