--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -58,7 +58,7 @@
       <plugin>
         <groupId>org.everit.osgi.dev</groupId>
         <artifactId>eosgi-maven-plugin</artifactId>
-        <version>3.2.1</version>
+        <version>3.3.3</version>
         <configuration>
           <sourceDistPath>${source.dist.folder}</sourceDistPath>
           <jacoco>
@@ -107,12 +107,12 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
-      <version>1.7.7</version>
+      <version>1.7.12</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>1.7.7</version>
+      <version>1.7.12</version>
     </dependency>
 
     <dependency>
@@ -131,9 +131,8 @@
     <dependency>
       <groupId>org.everit.osgi.dev</groupId>
       <artifactId>org.everit.osgi.dev.testrunner.junit4</artifactId>
-      <version>3.0.4</version>
+      <version>3.0.5</version>
     </dependency>
-
 
     <dependency>
       <groupId>org.apache.felix</groupId>
@@ -144,7 +143,7 @@
     <dependency>
       <groupId>org.everit.osgi.dev</groupId>
       <artifactId>org.everit.osgi.dev.richconsole</artifactId>
-      <version>1.2.1</version>
+      <version>1.2.2</version>
     </dependency>
 
     <dependency>
@@ -175,24 +174,18 @@
     <dependency>
       <groupId>org.everit.osgi</groupId>
       <artifactId>org.everit.osgi.ecm.extender.ri</artifactId>
-      <version>1.0.0</version>
+      <version>2.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.everit.osgi</groupId>
       <artifactId>org.everit.osgi.ecm.component.ri</artifactId>
-      <version>1.3.0</version>
+      <version>2.0.1</version>
     </dependency>
 
     <dependency>
       <groupId>org.apache.felix</groupId>
       <artifactId>org.apache.felix.log</artifactId>
       <version>1.0.1</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.everit.osgi</groupId>
-      <artifactId>org.everit.osgi.loglistener.slf4j</artifactId>
-      <version>1.0.0</version>
     </dependency>
 
     <dependency>
@@ -211,9 +204,9 @@
     <!-- Jetty with Http Service -->
 
     <dependency>
-      <groupId>org.everit.osgi</groupId>
-      <artifactId>org.everit.osgi.jetty.boot</artifactId>
-      <version>1.0.2</version>
+      <groupId>org.everit.jetty</groupId>
+      <artifactId>org.everit.jetty.osgi.boot</artifactId>
+      <version>1.0.0</version>
     </dependency>
 
     <!-- Felix webconsole with dependencies -->
@@ -221,7 +214,7 @@
     <dependency>
       <groupId>org.apache.felix</groupId>
       <artifactId>org.apache.felix.webconsole</artifactId>
-      <version>4.2.10</version>
+      <version>4.2.14</version>
     </dependency>
     <dependency>
       <groupId>commons-fileupload</groupId>
@@ -237,7 +230,7 @@
     <dependency>
       <groupId>org.everit.osgi</groupId>
       <artifactId>org.everit.osgi.ecm.component.webconsole</artifactId>
-      <version>1.0.0</version>
+      <version>1.1.0</version>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
