--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -49,8 +49,8 @@
           <instructions>
             <EOSGi-TestNum>1</EOSGi-TestNum>
             <Provide-Capability>
-              liquibase.schema;name=org.everit.persistence.liquibase.ext.osgi.test0;resource=/META-INF/liquibase/org.everit.persistence.liquibase.ext.osgi.test0.xml;version:Version="3.0.0",
-              liquibase.schema;name=org.everit.persistence.liquibase.ext.osgi.test0_included;resource="/META-INF/liquibase/org.everit.persistence.liquibase.ext.osgi.test0_included.xml"
+              liquibase.changelog;liquibase.changelog=org.everit.persistence.liquibase.ext.osgi.test0;resource=/META-INF/liquibase/org.everit.persistence.liquibase.ext.osgi.test0.xml;version:Version="3.0.0",
+              liquibase.changelog;liquibase.changelog=org.everit.persistence.liquibase.ext.osgi.test0_included;resource="/META-INF/liquibase/org.everit.persistence.liquibase.ext.osgi.test0_included.xml"
             </Provide-Capability>
           </instructions>
         </configuration>
